// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h5
  className="sc-AxjAm beXNVp sinoui-typography sinoui-typography--h5"
  color="textPrimary"
  type="h5"
>
  H5
</h5>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm beXNVp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h2>,
  <h5
    className="sc-AxjAm fPNvWl sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm iUwNcM sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm guumVB sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm kkLBqR sinoui-typography sinoui-typography--h5 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h5
    className="sc-AxjAm beXNVp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm jprkrG sinoui-typography sinoui-typography--h5"
    color="primary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm huEboB sinoui-typography sinoui-typography--h5"
    color="secondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm beXNVp sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm etSiqY sinoui-typography sinoui-typography--h5"
    color="textSecondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm flseSs sinoui-typography sinoui-typography--h5"
    color="error"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm bEDeVh sinoui-typography sinoui-typography--h5"
    color="warning"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm guumVB sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-AxjAm eUbJPh sinoui-typography sinoui-typography--h5"
    color="info"
    type="h5"
  >
    H5
  </h5>,
]
`;
